Fixed bug where spans were clipping through dropdown menu

--- a/src/components/order/orderConfirm/orderConfirm.scss
+++ b/src/components/order/orderConfirm/orderConfirm.scss
@@ -26,10 +26,6 @@
     color: #bbb9b9;
   }
 
-  span {
-    filter: brightness(0.8);
-  }
-
   &-total {
     margin-top: 1rem;
   }
